--- a/lab-07.ipynb
+++ b/lab-07.ipynb
@@ -14,9 +14,13 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python38064bititispipenv7de01288d54148dab9ee666a16e79d0f",
-   "display_name": "Python 3.8.0 64-bit ('ITIS': pipenv)",
-   "language": "python"
+   "name": "python380jvsc74a57bd0c7c45d3b6503cec90a3dd7c710bab375e5dca1f1afa63155a95467609e853a2c",
+   "display_name": "Python 3.8.0 64-bit ('ITIS-Q33kRsuk': pipenv)"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "c7c45d3b6503cec90a3dd7c710bab375e5dca1f1afa63155a95467609e853a2c"
+   }
   }
  },
  "nbformat": 4,
@@ -32,31 +36,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from itertools import chain"
+    "from itertools import chain\n",
+    "\n",
+    "from enum import IntEnum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Функционирование в синхронном режиме\n",
-    "f = lambda net: net\n",
-    "netF = lambda W, Y, k: sum(w * y for idx, (w, y) in enumerate(zip(W, Y)) if idx != k)\n",
-    "actF = lambda net: 1 if net > 0 else (-1 if net < 0 else f(net))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +70,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 13
     }
    ],
    "source": [
@@ -112,35 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([[ 0, -1, -1, -1,  1,  1,  1,  1,  1,  1,  3, -3, -3, -3, -1],\n",
-       "       [-1,  0,  3,  3,  1,  1, -3,  1, -3, -3, -1,  1,  1,  1, -1],\n",
-       "       [-1,  3,  0,  3,  1,  1, -3,  1, -3, -3, -1,  1,  1,  1, -1],\n",
-       "       [-1,  3,  3,  0,  1,  1, -3,  1, -3, -3, -1,  1,  1,  1, -1],\n",
-       "       [ 1,  1,  1,  1,  0,  3, -1,  3, -1, -1,  1, -1, -1, -1,  1],\n",
-       "       [ 1,  1,  1,  1,  3,  0, -1,  3, -1, -1,  1, -1, -1, -1,  1],\n",
-       "       [ 1, -3, -3, -3, -1, -1,  0, -1,  3,  3,  1, -1, -1, -1,  1],\n",
-       "       [ 1,  1,  1,  1,  3,  3, -1,  0, -1, -1,  1, -1, -1, -1,  1],\n",
-       "       [ 1, -3, -3, -3, -1, -1,  3, -1,  0,  3,  1, -1, -1, -1,  1],\n",
-       "       [ 1, -3, -3, -3, -1, -1,  3, -1,  3,  0,  1, -1, -1, -1,  1],\n",
-       "       [ 3, -1, -1, -1,  1,  1,  1,  1,  1,  1,  0, -3, -3, -3, -1],\n",
-       "       [-3,  1,  1,  1, -1, -1, -1, -1, -1, -1, -3,  0,  3,  3,  1],\n",
-       "       [-3,  1,  1,  1, -1, -1, -1, -1, -1, -1, -3,  3,  0,  3,  1],\n",
-       "       [-3,  1,  1,  1, -1, -1, -1, -1, -1, -1, -3,  3,  3,  0,  1],\n",
-       "       [-1, -1, -1, -1,  1,  1,  1,  1,  1,  1, -1,  1,  1,  1,  0]])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 42
-    }
-   ],
+   "outputs": [],
    "source": [
+    "def img_to_str(img):\n",
+    "    return ''.join(str(elem) for elem in img)\n",
+    "\n",
     "def create(imgs):\n",
     "    # Начальные веса как векторная сумма матричных произведений образов на транспонированных себя же\n",
     "    W = sum(np.dot(np.transpose([img]), [img]) for img in imgs)\n",
@@ -148,40 +127,75 @@
     "    # Зануляем диагональ\n",
     "    np.fill_diagonal(W, 0)\n",
     "\n",
-    "    return W, imgs\n",
+    "    return W\n",
     "\n",
-    "def operate(W, Y, img):\n",
+    "\n",
+    "class StopState(IntEnum):\n",
+    "    NONE = 0\n",
+    "    LAST = 1\n",
+    "    ASYNC = 2\n",
+    "    SYNC = 3\n",
+    "\n",
+    "def stopper(imgs):\n",
+    "    imgs = [img_to_str(im) for im in imgs]\n",
+    "\n",
+    "    def _stopper(Y):\n",
+    "        sY = [img_to_str(y) for y in Y]\n",
+    "\n",
+    "        # Проверяем совпадение с одним из образов\n",
+    "        if any(sY[-1] == im for im in imgs):\n",
+    "            return StopState.LAST\n",
+    "        \n",
+    "        # Проверяем зацикленность для асинхронного режима\n",
+    "        if len(Y) > 1 and sY[-1] == sY[-2]:\n",
+    "            return StopState.ASYNC\n",
+    "\n",
+    "        # Проверяем зацикленность для синхронного режима\n",
+    "        if len(Y) > 3 and sY[-1] == sY[-3] and sY[-2] == sY[-4]:\n",
+    "            return StopState.SYNC\n",
+    "        \n",
+    "        return StopState.NONE\n",
     "    \n",
+    "    return _stopper\n",
     "\n",
-    "create([A, I, F])"
+    "\n",
+    "def operate(W, imgs, img):\n",
+    "    stop = stopper(imgs)\n",
+    "\n",
+    "    Y = [img]\n",
+    "    while True:\n",
+    "        state = stop(Y)\n",
+    "        if state != StopState.NONE:\n",
+    "            return Y, state\n",
+    "\n",
+    "        Net = np.dot(W, Y[-1])\n",
+    "\n",
+    "        y = [actF(net, i) for net, i in zip(Net, Y[-1])]\n",
+    "        Y.append(y)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[[10, 13], [22, 29]]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 14
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Образ:     [-1  1  1  1  1  1 -1  1 -1 -1 -1  1  1  1  1]\nРезультат: [-1  1  1  1  1  1 -1  1 -1 -1 -1  1  1  1  1], 1\nОбраз:     [ 1 -1 -1 -1  1  1  1  1  1  1  1 -1 -1 -1  1]\nРезультат: [ 1 -1 -1 -1  1  1  1  1  1  1  1 -1 -1 -1  1], 1\nОбраз:     [ 1  1  1  1  1  1 -1  1 -1 -1  1 -1 -1 -1 -1]\nРезультат: [ 1  1  1  1  1  1 -1  1 -1 -1  1 -1 -1 -1 -1], 1\n"
+     ]
     }
    ],
    "source": [
-    "a = [\n",
-    "    [1, 2],\n",
-    "    [3, 4]\n",
-    "]\n",
-    "b = [\n",
-    "    [2, 3],\n",
-    "    [4, 5]\n",
-    "]\n",
-    "dot(a, b)"
+    "imgs = [A, I, F]\n",
+    "\n",
+    "W = create(imgs)\n",
+    "\n",
+    "for img in imgs:\n",
+    "    print(f\"Образ:     {np.array(img)}\")\n",
+    "    Y, state = operate(W, imgs, img)\n",
+    "    print(f\"Результат: {Y[-1]}, {state}\")"
    ]
   },
   {
